[metadata]
name = gyp-next
version = attr: gyp.VERSION
description = A fork of the GYP build system for use in the Node.js projects
long_description = file: README.md
long_description_content_type = text/markdown
author=Node.js contributors
author_email=ryzokuken@disroot.org
url=https://github.com/nodejs/gyp-next
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = 3.6
package_dir=
    =pylib
packages=gyp,gyp.generator

[options.entry_points]
console_scripts =
    executable-name = gyp:script_main
